refactor: mod load